@startuml Enhanced_ERD

!define TABLE(x) class x << (T,#FFAAAA) >>
!define PK(x) <b><color:red>PK:</color> x</b>
!define FK(x) <color:blue>FK:</color> x
!define UNIQUE(x) <color:green>UNIQUE:</color> x

skinparam backgroundColor white
skinparam classAttributeFontSize 13
skinparam classFontSize 14
skinparam arrowFontSize 12
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100
skinparam shadowing false
skinparam roundcorner 5

' ============================================
' CORE ENTITIES
' ============================================

class User {
  PK(id : INTEGER)
  UNIQUE(email : VARCHAR(254))
  --
  name : VARCHAR(255)
  role : VARCHAR(20)
  phone : VARCHAR(50)
  profile_image : VARCHAR(100)
  biography : TEXT
  is_staff : BOOLEAN
  is_active : BOOLEAN
  two_factor_enabled : BOOLEAN
  two_factor_secret : VARCHAR(32)
  date_joined : DATETIME
  updated_at : DATETIME
}

class Student {
  PK(student_id : INTEGER)
  UNIQUE(admission_number : VARCHAR(50))
  --
  full_name : VARCHAR(255)
  gender : VARCHAR(10)
  parent_name : VARCHAR(255)
  parent_email : VARCHAR(254)
  parent_phone : VARCHAR(20)
  status : VARCHAR(20)
  is_active : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

class Classroom {
  PK(class_id : INTEGER)
  FK(form_master_id : INTEGER)
  --
  name : VARCHAR(50)
  academic_year : VARCHAR(20)
  is_active : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

class Subject {
  PK(subject_id : INTEGER)
  UNIQUE(name : VARCHAR(100))
  UNIQUE(code : VARCHAR(20))
  --
  created_at : DATETIME
}

' ============================================
' RELATIONSHIP ENTITIES
' ============================================

class StudentEnrollment {
  PK(enrollment_id : INTEGER)
  FK(student_id : INTEGER)
  FK(classroom_id : INTEGER)
  --
  academic_year : VARCHAR(20)
  enrollment_date : DATE
  is_active : BOOLEAN
}

class TeachingAssignment {
  PK(assignment_id : INTEGER)
  FK(teacher_id : INTEGER)
  FK(subject_id : INTEGER)
  FK(classroom_id : INTEGER)
  --
  is_active : BOOLEAN
  created_at : DATETIME
}

' ============================================
' ATTENDANCE ENTITIES
' ============================================

class AttendanceSession {
  PK(session_id : INTEGER)
  FK(classroom_id : INTEGER)
  FK(subject_id : INTEGER)
  FK(teacher_id : INTEGER)
  --
  attendance_date : DATE
  created_at : DATETIME
  updated_at : DATETIME
}

class AttendanceRecord {
  PK(record_id : INTEGER)
  FK(session_id : INTEGER)
  FK(student_id : INTEGER)
  --
  status : VARCHAR(10)
  remarks : TEXT
  created_at : DATETIME
}

' ============================================
' RISK & ALERT ENTITIES
' ============================================

class StudentRiskProfile {
  PK(student_id : INTEGER)
  --
  risk_score : DECIMAL(6,2)
  risk_level : VARCHAR(20)
  last_calculated : DATETIME
  created_at : DATETIME
}

class SubjectRiskInsight {
  PK(student_id, subject_id)
  FK(student_id : INTEGER)
  FK(subject_id : INTEGER)
  --
  total_sessions : INTEGER
  absence_count : INTEGER
  late_count : INTEGER
  absence_rate : DECIMAL(5,2)
  last_calculated : DATETIME
  created_at : DATETIME
}

class Alert {
  PK(alert_id : INTEGER)
  FK(student_id : INTEGER)
  FK(subject_id : INTEGER)
  FK(assigned_to : INTEGER)
  --
  alert_type : VARCHAR(20)
  risk_level : VARCHAR(20)
  status : VARCHAR(20)
  escalated_to_admin : BOOLEAN
  alert_date : DATETIME
  updated_at : DATETIME
}

' ============================================
' INTERVENTION ENTITIES
' ============================================

class InterventionCase {
  PK(case_id : INTEGER)
  FK(student_id : INTEGER)
  FK(alert_id : INTEGER)
  FK(assigned_to : INTEGER)
  --
  status : VARCHAR(30)
  progress_status : VARCHAR(20)
  follow_up_date : DATE
  meeting_date : DATE
  meeting_notes : TEXT
  resolution_notes : TEXT
  escalation_reason : TEXT
  version : INTEGER
  created_at : DATETIME
  updated_at : DATETIME
}

class InterventionMeeting {
  PK(student_id, created_by)
  FK(student_id : INTEGER)
  FK(created_by : INTEGER)
  --
  meeting_date : DATE
  absence_reason : TEXT
  root_cause : VARCHAR(20)
  intervention_notes : TEXT
  action_plan : TEXT
  follow_up_date : DATE
  urgency_level : VARCHAR(10)
  status : VARCHAR(20)
  created_at : DATETIME
  updated_at : DATETIME
}

class ProgressUpdate {
  FK(meeting_id : INTEGER)
  FK(created_by : INTEGER)
  --
  update_text : TEXT
  created_at : DATETIME
}

' ============================================
' COMMUNICATION ENTITY
' ============================================

class Message {
  FK(sender_id : INTEGER)
  FK(recipient_id : INTEGER)
  --
  subject : VARCHAR(200)
  message : TEXT
  is_read : BOOLEAN
  created_at : DATETIME
  read_at : DATETIME
}

' ============================================
' RELATIONSHIPS
' ============================================

' User Relationships
User "1" -- "0..*" Classroom : form_master
User "1" -- "0..*" TeachingAssignment : teacher
User "1" -- "0..*" AttendanceSession : teacher
User "1" -- "0..*" Alert : assigned_to
User "1" -- "0..*" InterventionCase : assigned_to
User "1" -- "0..*" InterventionMeeting : created_by
User "1" -- "0..*" ProgressUpdate : created_by
User "1" -- "0..*" Message : sender
User "1" -- "0..*" Message : recipient

' Student Relationships
Student "1" -- "1" StudentRiskProfile
Student "1" -- "0..*" StudentEnrollment
Student "1" -- "0..*" AttendanceRecord
Student "1" -- "0..*" SubjectRiskInsight
Student "1" -- "0..*" Alert
Student "1" -- "0..*" InterventionCase
Student "1" -- "0..*" InterventionMeeting

' Classroom Relationships
Classroom "1" -- "0..*" StudentEnrollment
Classroom "1" -- "0..*" TeachingAssignment
Classroom "1" -- "0..*" AttendanceSession

' Subject Relationships
Subject "1" -- "0..*" TeachingAssignment
Subject "1" -- "0..*" AttendanceSession
Subject "1" -- "0..*" SubjectRiskInsight
Subject "1" -- "0..*" Alert

' Attendance Relationships
AttendanceSession "1" -- "0..*" AttendanceRecord

' Alert & Intervention Relationships
Alert "1" -- "0..*" InterventionCase
InterventionMeeting "1" -- "0..*" ProgressUpdate

@enduml
